# Azure_Kinect_DK

./: DK.cpp  DK.h  README.md  main.cpp  util.h  测量.txt  记录.md
linux/: 说明.md
linux/DK/: CMakeLists.txt
linux/DK/include/: DK.h
linux/DK/src/: DK.cpp  main.cpp
